--- a/openapi-defs/api_store/CNF-fr.yaml
+++ b/openapi-defs/api_store/CNF-fr.yaml
@@ -8,7 +8,7 @@ x-api-store-short-desc: |
 x-api-store-long-desc: |
   Le Fichier canadien sur les éléments nutritifs (FCÉN) est la base de données de référence sur la composition des aliments qui nous informe de la quantité des éléments nutritifs dans les aliments couramment consommés au Canada.
 x-api-store-documentation: <p>Veuillez consulter la documentation OpenAPI</p>
-x-api-store-phone: '613-558-7731'
+x-api-store-phone: ''
 x-api-store-sensitivity: Non classifié
 x-api-store-plans:
   public:
@@ -19,8 +19,8 @@ info:
   description: Le Fichier canadien sur les éléments nutritifs (FCÉN) est la base de données de référence sur la composition des aliments qui nous informe de la quantité des éléments nutritifs dans les aliments couramment consommés au Canada.
   version: '1.0.0'
   contact:
-    name: Marie-France Verreault
-    email: marie-france.verreault@canada.ca
+    name: ''
+    email: open-ouvert@tbs-sct.gc.ca
 
 schemes:
   - https
