--- a/openapi-defs/api_store/CTA-en.yaml
+++ b/openapi-defs/api_store/CTA-en.yaml
@@ -9,7 +9,7 @@ x-api-store-short-desc: |
 x-api-store-long-desc: |
   The Clinical Trials Database provides to the public a listing of specific information relating to phase I, II and III clinical trials in patients. The database is managed by Health Canada and provides a source of information about Canadian clinical trials involving human pharmaceutical and biological drugs.
 x-api-store-documentation: <p>See OpenAPI documentation</p>
-x-api-store-phone: '613-954-2964'
+x-api-store-phone: ''
 x-api-store-sensitivity: Unclassified
 x-api-store-plans:
   public:
@@ -21,8 +21,8 @@ info:
     The Clinical Trials Database provides to the public a listing of specific information relating to phase I, II and III clinical trials in patients. The database is managed by Health Canada and provides a source of information about Canadian clinical trials involving human pharmaceutical and biological drugs.
   version: '1.0.0'
   contact:
-    name: Valerie Tweedle
-    email: valerie.tweedle@canada.ca
+    name: ''
+    email: open-ouvert@tbs-sct.gc.ca
 
 schemes:
   - https
