--- a/openapi-defs/api_store/CTA-fr.yaml
+++ b/openapi-defs/api_store/CTA-fr.yaml
@@ -9,7 +9,7 @@ x-api-store-short-desc: |
 x-api-store-long-desc: |
   La base de données sur les essais cliniques donne à la population une liste de renseignements précis sur les essais cliniques des phases I, II et III chez les patients. Gérée par Santé Canada, la base de données constitue une source d'information sur les essais cliniques effectués au Canada avec les médicaments pharmaceutiques et biologiques à usage humain.
 x-api-store-documentation: <p>Veuillez consulter la documentation OpenAPI</p>
-x-api-store-phone: '613-954-2964'
+x-api-store-phone: ''
 x-api-store-sensitivity: Non classifié
 x-api-store-plans:
   public:
@@ -21,8 +21,8 @@ info:
     La base de données sur les essais cliniques donne à la population une liste de renseignements précis sur les essais cliniques des phases I, II et III chez les patients. Gérée par Santé Canada, la base de données constitue une source d'information sur les essais cliniques effectués au Canada avec les médicaments pharmaceutiques et biologiques à usage humain.
   version: '1.0.0'
   contact:
-    name: Valerie Tweedle
-    email: valerie.tweedle@canada.ca
+    name: ''
+    email: open-ouvert@tbs-sct.gc.ca
 
 schemes:
   - https
