--- a/openapi-defs/api_store/CVP-fr.yaml
+++ b/openapi-defs/api_store/CVP-fr.yaml
@@ -7,7 +7,7 @@ x-api-store-short-desc: |
 x-api-store-long-desc: |
   La base de données en ligne des effets indésirables de Canada Vigilance renferme de l'information au sujet des effets indésirables soupçonnés (ou effets secondaires) associés à des produits de santé.
 x-api-store-documentation: <p>Veuillez consulter la documentation OpenAPI</p>
-x-api-store-phone: '613-697-3966'
+x-api-store-phone: ''
 x-api-store-sensitivity: Non classifié
 x-api-store-plans:
   public:
@@ -18,8 +18,8 @@ info:
   description: La base de données en ligne des effets indésirables de Canada Vigilance renferme de l'information au sujet des effets indésirables soupçonnés (ou effets secondaires) associés à des produits de santé.
   version: '1.0.0'
   contact:
-    name: Bill Wilson
-    email: billy.wilson@canada.ca
+    name: ''
+    email: open-ouvert@tbs-sct.gc.ca
 
 schemes:
   - https
