--- a/openapi-defs/api_store/DPD-en.yaml
+++ b/openapi-defs/api_store/DPD-en.yaml
@@ -12,7 +12,7 @@ x-api-store-long-desc: |
 
   Health Canada is the federal regulator of therapeutic products and does not provide medical advice on the use of the products identified in this database. For information related to treatment options, choices of medications and their uses, illnesses, side effects or drug interactions, please contact your health care professional. For information on where these products are sold, please contact the individual company directly.
 x-api-store-documentation: <p>See OpenAPI documentation</p>
-x-api-store-phone: '613-954-2964'
+x-api-store-phone: ''
 x-api-store-sensitivity: Unclassified
 x-api-store-plans:
   public:
@@ -28,8 +28,8 @@ info:
     Health Canada is the federal regulator of therapeutic products and does not provide medical advice on the use of the products identified in this database. For information related to treatment options, choices of medications and their uses, illnesses, side effects or drug interactions, please contact your health care professional. For information on where these products are sold, please contact the individual company directly.
   version: '1.0.0'
   contact:
-    name: Valerie Tweedle
-    email: valerie.tweedle@canada.ca
+    name: ''
+    email: open-ouvert@tbs-sct.gc.ca
 
 schemes:
   - https
