--- a/openapi-defs/api_store/MDALL-en.yaml
+++ b/openapi-defs/api_store/MDALL-en.yaml
@@ -14,7 +14,7 @@ x-api-store-long-desc: |
 
   Only products which appear in this database listing may be offered for general marketing purposes in Canada. Class I Devices, or devices which relate to Investigational Testing Authorization or Special Access do not appear in this listing.
 x-api-store-documentation: <p>See OpenAPI documentation</p>
-x-api-store-phone: '613-954-0285'
+x-api-store-phone: ''
 x-api-store-sensitivity: Unclassified
 x-api-store-plans:
   public:
@@ -32,8 +32,8 @@ info:
     Only products which appear in this database listing may be offered for general marketing purposes in Canada. Class I Devices, or devices which relate to Investigational Testing Authorization or Special Access do not appear in this listing.
   version: '1.0.0'
   contact:
-    name: Sarah Chandler
-    email: sarah.chandler@canada.ca
+    name: ''
+    email: open-ouvert@tbs-sct.gc.ca
 
 schemes:
   - https
