--- a/openapi-defs/api_store/NOC-en.yaml
+++ b/openapi-defs/api_store/NOC-en.yaml
@@ -11,7 +11,7 @@ x-api-store-long-desc: |
 
   The database is updated nightly and contains NOC information on human drugs from January 1, 1994 to date. It also contains NOC information on Veterinary drugs from September 19, 2000 to date. Through a phased in approach Health Canada will populate the remaining NOCs for Veterinary drugs from January 1, 1994 to September 18, 2000.
 x-api-store-documentation: <p>See OpenAPI documentation</p>
-x-api-store-phone: '613-954-2964'
+x-api-store-phone: ''
 x-api-store-sensitivity: Unclassified
 x-api-store-plans:
   public:
@@ -25,8 +25,8 @@ info:
     The database is updated nightly and contains NOC information on human drugs from January 1, 1994 to date. It also contains NOC information on Veterinary drugs from September 19, 2000 to date. Through a phased in approach Health Canada will populate the remaining NOCs for Veterinary drugs from January 1, 1994 to September 18, 2000.
   version: '1.0.0'
   contact:
-    name: Valerie Tweedle
-    email: valerie.tweedle@canada.ca
+    name: ''
+    email: open-ouvert@tbs-sct.gc.ca
 
 schemes:
   - https
