--- a/openapi-defs/api_store/SR-en.yaml
+++ b/openapi-defs/api_store/SR-en.yaml
@@ -8,7 +8,7 @@ x-api-store-short-desc: |
 x-api-store-long-desc: |
   The Drug and Health Product Register brings together information on product licences, drug and health product inspections, buying and using products safely, and side effects, recalls and complaints.
 x-api-store-documentation: <p>See OpenAPI documentation</p>
-x-api-store-phone: '613-222-7658'
+x-api-store-phone: ''
 x-api-store-sensitivity: Unclassified
 x-api-store-plans:
   public:
@@ -19,8 +19,8 @@ info:
   description: The Drug and Health Product Register brings together information on product licences, drug and health product inspections, buying and using products safely, and side effects, recalls and complaints.
   version: '1.0.0'
   contact:
-    name: Scott Kennedy
-    email: scott.kennedy2@canada.ca
+    name: ''
+    email: open-ouvert@tbs-sct.gc.ca
 
 schemes:
   - https
