--- a/openapi-defs/api_store/SR-fr.yaml
+++ b/openapi-defs/api_store/SR-fr.yaml
@@ -8,7 +8,7 @@ x-api-store-short-desc: |
 x-api-store-long-desc: |
   Le site internet, Registre des médicaments et des produits de santé, regroupe l’information au sujet des licences de produit, des inspections, de l’achat et de l’utilisation sécuritaire des produits, des effets secondaires, des rappels et des plaintes.
 x-api-store-documentation: <p>Veuillez consulter la documentation OpenAPI</p>
-x-api-store-phone: '613-222-7658'
+x-api-store-phone: ''
 x-api-store-sensitivity: Non classifié
 x-api-store-plans:
   public:
@@ -20,8 +20,8 @@ info:
     Le site internet, Registre des médicaments et des produits de santé, regroupe l’information au sujet des licences de produit, des inspections, de l’achat et de l’utilisation sécuritaire des produits, des effets secondaires, des rappels et des plaintes.
   version: '1.0.0'
   contact:
-    name: Scott Kennedy
-    email: scott.kennedy2@canada.ca
+    name: ''
+    email: open-ouvert@tbs-sct.gc.ca
 
 schemes:
   - https
