--- a/openapi-defs/api_store/DPD-fr.yaml
+++ b/openapi-defs/api_store/DPD-fr.yaml
@@ -12,7 +12,7 @@ x-api-store-long-desc: |
 
   Santé Canada est l'organisme fédéral qui réglemente les produits thérapeutiques et nous ne donnons pas de conseils médicaux sur l'utilisation des produits dans cette base de données. Pour de plus amples informations sur les choix de traitement, les choix de médicament et leurs utilisations, maladies, effets secondaires et interactions médicamenteuses, veuillez contacter votre professionnel de la santé.
 x-api-store-documentation: <p>Veuillez consulter la documentation OpenAPI</p>
-x-api-store-phone: '613-954-2964'
+x-api-store-phone: ''
 x-api-store-sensitivity: Non classifié
 x-api-store-plans:
   public:
@@ -29,8 +29,8 @@ info:
 
   version: '1.0.0'
   contact:
-    name: Valerie Tweedle
-    email: valerie.tweedle@canada.ca
+    name: ''
+    email: open-ouvert@tbs-sct.gc.ca
 
 schemes:
   - https
@@ -500,8 +500,7 @@ definitions:
     description: Informations sur les capacités d'emballage disponible pour chaque produit pharmaceutique.
     properties:
       drug_code:
-        type: string
-        description: Le code attribué à chaque produit pharmaceutique.
+        $ref: '#/definitions/DrugCode'
 
       package_size:
         type: string
