add  last_update_date field to DrugProduct

--- a/openapi-defs/api_store/DPD-en.yaml
+++ b/openapi-defs/api_store/DPD-en.yaml
@@ -451,6 +451,9 @@ definitions:
       company_name:
         type: string
         description: The company name
+      last_update_date:
+        type: string
+        description: This date is updated any time certain, but not all, key fields are changed     
     xml:
       name: DrugProduct
 
