--- a/openapi-defs/api_store/DPD-fr.yaml
+++ b/openapi-defs/api_store/DPD-fr.yaml
@@ -470,6 +470,9 @@ definitions:
       company_name:
         type: string
         description: Le nom de l'entreprise.
+      last_update_date:
+        type: string
+        description: Cette date est mise à jour chaque fois que certains champs clés sont changés, mais pas tous.
     xml:
       name: DrugProduct
 
